# GobbletQt

./: BluetoothIcon.qml  CMakeLists.txt  Info.plist  OldStateCode  PieChart.h  README.md  Test.pro  ai.cpp  ai.h  aimove.cpp  aimove.h  bluetoothManager.cpp  bluetoothManager.h  board.cpp  board.h  board3d.cpp  board3d.h  bridge.h  chat.cpp  chat.h  chatclient.cpp  chatserver.cpp  eventslistener.h  example  game.qml  gobbler.cpp  gobbler.h  gobbler.qml  gobbler3d.cpp  gobbler3d.h  grades.cpp  grades.h  help.qml  main.cpp  main.qml  matrix.cpp  matrix.h  mediator.cpp  mediator.h  menu.qml  (+17 more)
Gobblet/: BluetoothIcon.qml  CMakeLists.txt  ComputerIcon.qml  EyesIcon.qml  HumanIcon.qml  PlayIcon.qml  board.cpp  board3d.cpp  game.qml  gobbler.cpp  gobbler.qml  gobbler3d.h  help.qml  main.cpp  main.qml  matrix.cpp  matrix.h  mediator.cpp  mediator.h  menu.qml  qml.qrc  scanblues.qml  setupBoard.h  shape.cpp  shape.h  shape3d.cpp  shape3d.h  state.cpp  state.h
Gobblet/android/: AndroidManifest.xml  build.gradle  gradle.properties
android/: AndroidManifest.xml  build.gradle  gradle.properties
android/res/values/: styles.xml
blues/: CMakeLists.txt  bluetoothManager.cpp  bluetoothManager.h  chatclient.cpp  chatclient.h  chatserver.cpp  chatserver.h
gobblet_ai/: CMakeLists.txt  ai.cpp  ai.h  aimove.h
ios/: Info.plist  LaunchScreen.storyboard
